--- a/style.css
+++ b/style.css
@@ -1,3 +1,19 @@
 .size {
-  width: 30%;
+  width: 100%;
+  height: 15vh;
+  object-fit: scale-down;
+}
+
+.ellipsis {
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+}
+
+.detailsImg {
+  width: 20%;
+}
+
+.opacity {
+  opacity: 0;
 }
